# Cosec

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: Assembler.c  Assembler.h  Compiler.c  Compiler.h  Debug.c  Debug.h  Emitter.c  Emitter.h  Encoder.c  Encoder.h  Error.c  Error.h  IR.c  IR.h  Lexer.c  Lexer.h  Parser.c  Parser.h  RegAlloc.c  RegAlloc.h  RegisterAllocator.c  RegisterAllocator.h  Type.c  Type.h  main.c
src/analysis/: Analysis.h  CFG.c  CFG.h  Liveness.c  Liveness.h  UseChain.c  UseChain.h
src/opt/: Fold.c  Fold.h
tests/: RunTest.py  RunTests.py
tests/arithmetic/: 1.c  12.c  3.c  4.c  7.c
tests/arrays/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c
tests/assignment/: 3.c  4.c
tests/conditional/: 1.c  10.c  12.c  15.c  18.c  2.c  20.c  21.c  3.c  4.c  5.c  6.c  7.c
tests/decl/: 3.c
tests/declarations/: 2.c
tests/expressions/arithmetic/: 10.c  11.c  13.c  2.c  5.c  6.c  8.c  9.c
tests/expressions/assignment/: 1.c  2.c  5.c  6.c  7.c
tests/expressions/conditional/: 11.c  13.c  14.c  16.c  17.c  19.c  22.c  9.c
tests/expressions/floats/: 1.c  2.c  3.c  5.c
tests/expressions/pointers/: 3.c  4.c  5.c  7.c  8.c
tests/expressions/strings/: 1.c  3.c
tests/floats/: 4.c  6.c
tests/functions/: 1.c  2.c  3.c
tests/if/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
tests/loop/: 1.c  10.c  11.c  12.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
tests/pointers/: 1.c  2.c  6.c
tests/return/: 1.c  2.c  3.c
tests/sizeof/: 1.c  2.c  3.c  4.c  5.c  6.c
tests/strings/: 2.c
tests/types/: 1.c  2.c  3.c  4.c  5.c
